# BabaJi

./: .dockerignore  .gitignore  DEPLOY.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/web/: Dockerfile  instrumentation.ts  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
docs/: ADMIN_GUIDE.md  API.md  ARCHITECTURE.md  ARCHITECTURE.mmd  AWS_FREE_TIER_DEPLOYMENT.md  AWS_PRODUCTION_EXECUTION_PLAN.md  BILLING_LIFECYCLE.md  BRD.md  BRD_DETAILED.md  DEMO_MODE.md  EVAL.md  REVIEW_CTO.md  REVIEW_LAWYER.md  REVIEW_MARKETING.md  REVIEW_PRODUCT_DESIGN.md  REVIEW_RESPONSIBLE_AI.md  RUNBOOK.md  SAFETY.md  SERVICE_DOCUMENTATION.md  TESTING_UI_SELENIUM.md  THREAT_MODEL.md  TIERS.md
infra/: Caddyfile  docker-compose.aws-lite.yml  docker-compose.prod.yml  docker-compose.yml
infra/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/nginx/: aws-lite.conf
sample_data/: birth_profiles.json  scripture_excerpt.txt  vaastu_floorplan_notes.txt
scripts/: build.sh  cortexctl.sh  demo.sh  health.sh  run.sh  run_warmup.sh  setup.sh  test-ui.sh  test.sh
scripts/aws/: guardrails_check.sh  preflight.sh  push_and_run.sh  remote_logs.sh  terraform.sh
services/agents/: Dockerfile  requirements.txt
services/api/: Dockerfile  requirements.txt
services/kb/: Dockerfile  requirements.txt
services/kg/: Dockerfile  requirements.txt
services/media/: Dockerfile
(+66 files in other folders)
